cleanup sdk.bat